--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -3,7 +3,7 @@ html(class="no-js" lang="en")
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
-    title= "Tremble v" + version
+    title= title
     meta(name="description" content="")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
